# freertos-socfpga

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  LICENSE.md  Makefile  README.md  lscript.ld
.github/ISSUE_TEMPLATE/: bug-report.yml
FreeRTOS/: CMakeLists.txt
FreeRTOS/Demo/CORTEX_A55_SOCFPGA/: FreeRTOSIPConfig.h  fpga_mmio.h
FreeRTOS/Demo/CORTEX_A55_SOCFPGA/apps/hello_world/: CMakeLists.txt  README.md  hello_world.c
FreeRTOS/Demo/CORTEX_A55_SOCFPGA/apps/samples/: README.md
FreeRTOS/Demo/CORTEX_A55_SOCFPGA/apps/samples/cli_app/: CMakeLists.txt  README.md  cli_app.c  cli_app.h  cli_eth.c  cli_fat.c  cli_fcs.c  cli_fpga_manager.c  cli_gpio.c  cli_i2c.c  cli_qspi.c  cli_reboot.c  cli_rsu.c  cli_timer.c  cli_utils.c  cli_utils.h  cli_wdt.c  fatfs_helper.h  main.c
FreeRTOS/Demo/CORTEX_A55_SOCFPGA/apps/samples/main_blinky/: CMakeLists.txt  README.md  main.c
FreeRTOS/Demo/CORTEX_A55_SOCFPGA/apps/samples/main_freertosplus_basic/: CMakeLists.txt  README.md  basic_freertosplus_icmp.c  basic_freertosplus_tcp_echoserver.c  basic_freertosplus_udp.c  main_freertosplus_basic.c  main_freertosplus_basic.h
FreeRTOS/Demo/CORTEX_A55_SOCFPGA/apps/samples/main_full/: CMakeLists.txt  README.md  RegTests.c  main_full.c
FreeRTOS/Demo/CORTEX_A55_SOCFPGA/startup/: cpu_init.S
FreeRTOS/Demo/SOCFPGA/: FreeRTOSConfig.h
FreeRTOS/Demo/SOCFPGA/apps/hello_world/: CMakeLists.txt  README.md
FreeRTOS/Demo/SOCFPGA/apps/samples/: README.md
FreeRTOS/Demo/SOCFPGA/apps/samples/cli_app/: CMakeLists.txt  README.md  cli_app.c  cli_bridge.c  cli_i3c.c  cli_ros.c  cli_spi.c  cli_utils.h  fatfs_helper.c  socfpga_mmc.c  socfpga_mmc.h
FreeRTOS/Demo/SOCFPGA/apps/samples/main_blinky/: CMakeLists.txt  README.md  main_blinky.c
FreeRTOS/Demo/SOCFPGA/apps/samples/main_freertosplus_basic/: CMakeLists.txt  README.md  basic_freertosplus_tcp.c  iperf_task.h  iperf_task_v3_0h.c  main.c  main_freertosplus_basic_ipv6.c
FreeRTOS/Demo/SOCFPGA/apps/samples/main_full/: CMakeLists.txt  IntQueueTimer.c  README.md  TestRunner.c  main.c
FreeRTOS/Demo/SOCFPGA/startup/: setup_pagetable.c
FreeRTOS/FreeRTOS-Plus/Source/portable/BufferManagement/: BufferAllocation_1.c  BufferAllocation_2.c
FreeRTOS/FreeRTOS-Plus/Source/portable/Compiler/GCC/: pack_struct_end.h  pack_struct_start.h
FreeRTOS/FreeRTOS-Plus/Source/portable/NetworkInterface/SOCFPGA/: CMakeLists.txt  NetworkInterface.c  SocfpgaNetworkInterface.h
FreeRTOS/portable/: CMakeLists.txt
FreeRTOS/portable/GCC/ARM_AARCH64/: CMakeLists.txt  port.c  portASM.S  portSocfpga.c  portStandardLib.c  portmacro.h
FreeRTOS/portable/GCC/ARM_CA55_64_BIT/: CMakeLists.txt  heap_3_extra.c  port.c  portSocfpga.c  portmacro.h
drivers/: CMakeLists.txt  mainpage.dox
drivers/bridge/: CMakeLists.txt  socfpga_bridge.c  socfpga_bridge.h
drivers/clk_mngr/: socfpga_clk_mngr.c  socfpga_clk_mngr.h
drivers/common/: socfpga_cache.h  socfpga_cache_maintenance.S  socfpga_defines.h
drivers/console/: CMakeLists.txt  socfpga_console.c  socfpga_console.h
drivers/dma/: CMakeLists.txt  socfpga_dma.c  socfpga_dma.h  socfpga_dma_reg.h
drivers/ecc/: CMakeLists.txt  socfpga_ecc.c  socfpga_ecc.h
drivers/ethernet/: CMakeLists.txt  socfpga_xgmac.c  socfpga_xgmac.h  socfpga_xgmac_configs.h  socfpga_xgmac_ll.c  socfpga_xgmac_ll.h  socfpga_xgmac_phy.c  socfpga_xgmac_phy.h  socfpga_xgmac_phy_ll.c  socfpga_xgmac_phy_ll.h  socfpga_xgmac_reg.h
drivers/fcs/: CMakeLists.txt  socfpga_fcs.c  socfpga_fcs.h  socfpga_fcs_ll.h
drivers/fpga_manager/: socfpga_fpga_manager.c  socfpga_fpga_manager.h  socfpga_freeze_ip.c  socfpga_freeze_ip.h  socfpga_freeze_ip_ll.c  socfpga_freeze_ip_ll.h
drivers/gic/: CMakeLists.txt  socfpga_gic.c  socfpga_gic.h  socfpga_gic_reg.c  socfpga_gic_reg.h  socfpga_gic_registers.h  socfpga_interrupt.c  socfpga_interrupt.h  socfpga_interrupt_priority.h
drivers/gpio/: socfpga_gpio.c  socfpga_gpio.h
drivers/i2c/: socfpga_i2c.c  socfpga_i2c.h  socfpga_i2c_ll.c  socfpga_i2c_ll.h
drivers/i3c/: CMakeLists.txt  socfpga_i3c.c  socfpga_i3c.h  socfpga_i3c_ll.c  socfpga_i3c_ll.h
drivers/iossm/: socfpga_iossm.c  socfpga_iossm.h  socfpga_iossm_ll.c  socfpga_iossm_ll.h
drivers/qspi/: socfpga_flash.c  socfpga_flash.h  socfpga_flash_adapter.c  socfpga_flash_adapter.h  socfpga_qspi.c  socfpga_qspi.h  socfpga_qspi_ll.c  socfpga_qspi_ll.h
drivers/reboot_mngr/: socfpga_reboot_mngr.c  socfpga_reboot_mngr.h
drivers/reset_mngr/: socfpga_rst_mngr.c  socfpga_rst_mngr.h  socfpga_rst_mngr_reg.h
drivers/sdm_mailbox/: socfpga_mbox_client.c  socfpga_mbox_client.h  socfpga_sip_handler.c  socfpga_sip_handler.h
drivers/sdmmc/: CMakeLists.txt  socfpga_sdmmc.c  socfpga_sdmmc.h  socfpga_sdmmc_ll.c  socfpga_sdmmc_ll.h
drivers/seu/: socfpga_seu.c  socfpga_seu.h
drivers/smmu/: socfpga_smmu.c  socfpga_smmu.h  socfpga_smmu_reg.h
drivers/spi/: socfpga_spi.c  socfpga_spi.h  socfpga_spi_ll.c  socfpga_spi_ll.h
drivers/timer/: socfpga_timer.c  socfpga_timer.h
drivers/uart/: socfpga_uart.c  socfpga_uart.h  socfpga_uart_ll.c  socfpga_uart_ll.h
drivers/usb3/: CMakeLists.txt  socfpga_usb.c  socfpga_usb.h  socfpga_usb3_reg.h
drivers/usb3/dwc3/: dwc3.c  dwc3.h  dwc3_ll.c  dwc3_ll.h
drivers/usb3/host/: xhci.c  xhci.h  xhci_cap.c  xhci_commands.c  xhci_commands.h  xhci_context.c  xhci_context.h  xhci_doorbell.c  xhci_doorbell.h  xhci_endpoints.c  xhci_endpoints.h  xhci_events.c  xhci_events.h  xhci_interrupts.c  xhci_interrupts.h  xhci_rings.c  xhci_rings.h
drivers/usb_otg/: socfpga_usb_otg_reg.h
drivers/wdt/: CMakeLists.txt  socfpga_watchdog.c  socfpga_watchdog.h
fcs/: CMakeLists.txt
fcs/portable/: CMakeLists.txt  libfcs_logging.h  libfcs_osal.c  libfcs_utils.c
rsu/: CMakeLists.txt
samples/: README.md
samples/ecc/: CMakeLists.txt  ecc_sample.c  main.c
samples/multithread_samples/: CMakeLists.txt  main.c
samples/rsu/: CMakeLists.txt  initial_image.pfg  main.c  rsu_sample.c
tools/: README.md  make_sdimage.sh  make_sdimage_p3.py  qspi_flash_image_agilex5_boot.pfg  qspi_flash_image_agilex5_boot_sdmmc.pfg  socfpga_build.cmake  target_socfpga.cmake
(+88 files in other folders)
