cmake_minimum_required(VERSION 3.15.0)
project(socfpga_peripheral_drivers C CXX ASM)

if(NOT TARGET freertos_kernel )
    message(FATAL_ERROR "freertos_kernel library not specified. "
	"Please ensure that the freertos_kernel is built first.")
endif()

add_library(socfpga_drivers OBJECT)
target_sources(socfpga_drivers PRIVATE)

target_link_libraries(socfpga_drivers freertos_kernel)

add_subdirectory(common)
add_subdirectory(console)
add_subdirectory(dma)
add_subdirectory(ecc)
add_subdirectory(reset_mngr)
add_subdirectory(i2c)
add_subdirectory(i3c)
add_subdirectory(qspi)
add_subdirectory(timer)
add_subdirectory(clk_mngr)
add_subdirectory(sys_mngr)
add_subdirectory(seu)
add_subdirectory(sdm_mailbox)
add_subdirectory(sdmmc)
add_subdirectory(spi)
add_subdirectory(wdt)
add_subdirectory(reboot_mngr)
if(FREERTOS_USB)
	add_subdirectory(usb3)
endif()
add_subdirectory(gic)
add_subdirectory(uart)
add_subdirectory(gpio)
if(FREERTOS_TCPIP)
	add_subdirectory(ethernet)
endif()
add_subdirectory(iossm)
add_subdirectory(smmu)
add_subdirectory(fpga_manager)
add_subdirectory(bridge)
add_subdirectory(fcs)

